==============================
9999-99-99 99:99:99 +0000 HEAD
==============================

  commit 2ce59f530a40c4ba112119031ade310554d32e9c
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Thu Jan 27 20:27:48 2011 -0500
  
    Eliminate Socket6 use from the tests.

  commit a5a3652cf445211a6b1e759fb5acebadeee3878e
  Author: Perl Whore <whoreperl@gmail.com>
  Date:   Thu Jan 27 18:00:24 2011 -0500
  
    Resolve a test failure on CentOS, which appears to be a race
    condition in the test itself. Resolves rt.cpan.org #61727.

  commit 77f807dda02bfb6d21a15ca60d84c737a226a4d8
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Fri Dec 3 23:43:40 2010 -0500
  
    Fix alarms tests to match POE's documentation.

  commit f7e2481974b1ce1efcb62e7c0ad31bb69ec6fc1d
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Fri Dec 3 23:43:28 2010 -0500
  
    Convert metadata and changelogs to Git workflow. 

================================
2010-11-18 22:37:59 -0500 v1_036
================================

  commit bc3f702241916c37f833d4bb6ff2a60b716fcb6b
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Thu Nov 18 22:37:59 2010 -0500
  
    New revision for a new release.

  commit 881ccb7c4a73550db6a27de9e438237a25665ecb
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Thu Nov 18 08:53:16 2010 -0500
  
    Fix POE::Wheel::ReadLine test issues on solaris and DragonFly BSD.

    Force a known good TERM environment variable on solaris, rather than
    whatever one might be set. Catch the case where POE::Wheel::ReadLine
    fails to instantiate, and skip all tests.

  commit 44bfa444898de17eb955ac63d822493861b91b6e
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Tue Sep 7 22:14:56 2010 -0400
  
    Remove cvs/svn keywords.

  commit 5e1e5c185f5790f58da34287c8f44880e31fce79
  Author: Rocco Caputo <rcaputo@cpan.org>
  Date:   Tue Sep 7 22:01:35 2010 -0400
  
    Promote poe-test-loops contents to the top level. 

================================